--- a/socotra.ipynb
+++ b/socotra.ipynb
@@ -6,6 +6,7 @@
       "name": "socotra.ipynb",
       "version": "0.3.2",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -69,9 +70,12 @@
       "source": [
         "#Using credentials provided get Auth Token\n",
         "def get_auth_token():\n",
+        "  auth_url = 'https://api.sandbox.socotra.com/account/authenticate'\n",
+        "  host_name = 'vgopu-sata-configeditor.co.sandbox.socotra.com'\n",
+        "  \n",
         "  response = requests.post(\n",
-        "          'https://api.sandbox.socotra.com/account/authenticate',\n",
-        "          json={'hostName':'vgopu-sata-configeditor.co.sandbox.socotra.com',\n",
+        "          auth_url,\n",
+        "          json={'hostName': host_name,\n",
         "                'username':'alice.lee',\n",
         "                'password':'socotra'})\n",
         "\n",
@@ -105,7 +109,7 @@
         "  #creating Headers\n",
         "  headers = {'Authorization': authToken}\n",
         "  session = requests.Session()\n",
-        "  session.headers.update({'Authorization': authToken})\n",
+        "  session.headers.update(headers)\n",
         "  return session"
       ],
       "execution_count": 0,
@@ -131,12 +135,14 @@
       "source": [
         "#Creating a policy holder\n",
         "def create_policyholder(session):\n",
+        "  create_policyholder_url = 'https://api.sandbox.socotra.com/policyholder/create'\n",
         "  policyholder_values = {'first_name': 'Vijaya',\n",
         "                         'last_name': 'Gopu',\n",
         "                         'date_of_birth': '1987-10-03',\n",
         "                         'policyholder_id': 'placeholder'}\n",
+        "  \n",
         "  response = session.post(\n",
-        "        'https://api.sandbox.socotra.com/policyholder/create',\n",
+        "        create_policyholder_url,\n",
         "        json={'values': policyholder_values})\n",
         "  policyholder = response.json()\n",
         "  return policyholder"
@@ -203,6 +209,7 @@
       "source": [
         "#Create policy\n",
         "def create_policy(session,policyholder,exposure):\n",
+        "  create_policy_url = 'https://api.sandbox.socotra.com/policy'\n",
         "  policyholder_locator = policyholder['locator']\n",
         "  #create policy channel\n",
         "  policy_values = {'channel': 'Direct'}\n",
@@ -214,7 +221,7 @@
         "             'exposures': [exposure]\n",
         "           }\n",
         "\n",
-        "  response = session.post('https://api.sandbox.socotra.com/policy',json=policy)\n",
+        "  response = session.post(create_policy_url,json=policy)\n",
         "  #pp = pprint.PrettyPrinter(indent=1)\n",
         "  #pp.pprint(response.json())\n",
         "  policy = response.json()\n",
@@ -269,11 +276,11 @@
       "metadata": {
         "id": "IlTQyVvTX4o7",
         "colab_type": "code",
+        "outputId": "ceabe113-af37-4aeb-fbc6-1c0d57265e95",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 50
-        },
-        "outputId": "12de8b6e-33b1-4f4a-d1c8-9c568741035e"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -290,7 +297,7 @@
         {
           "output_type": "stream",
           "text": [
-            "Policy id: 100000037\n",
+            "Policy id: 100000061\n",
             "Number of invoices on Policy: 1\n"
           ],
           "name": "stdout"
