--- a/gfAccuWeatherLoadToBigPanda.ipynb
+++ b/gfAccuWeatherLoadToBigPanda.ipynb
@@ -27,6 +27,31 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "mG5Aw0aZwnSe",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Read Me:\n",
+        "\n",
+        "This code includes unit testing components, **If you intend to test the individual components set the Test boolean value to True**. By default this flag is set to true. "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NXbTqZWbyHQ3",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "uTest = True"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "2KTi7pRoiXsP",
         "colab_type": "text"
       },
@@ -45,7 +70,8 @@
       },
       "source": [
         "import requests\n",
-        "import pprint"
+        "import pprint\n",
+        "import unittest"
       ],
       "execution_count": 0,
       "outputs": []
@@ -75,6 +101,10 @@
         "    'New York': [349727, 710949, 2531279, 2245721, 2212053],\n",
         "    'Chicago' : [348308, 2249562, 1162619, 1169367, 1068089],\n",
         "    'San Francisco': [347629, 113032, 261737, 3409211, 262723]\n",
+        "}\n",
+        "\n",
+        "loc_keys_dict1 = {\n",
+        "    'San Francisco': [262723]\n",
         "}"
       ],
       "execution_count": 0,
@@ -87,7 +117,7 @@
         "colab_type": "text"
       },
       "source": [
-        "#Invoking function for AccuWeather Current Conditions API"
+        "#Function to Invoke AccuWeather - Current Conditions API"
       ]
     },
     {
@@ -98,7 +128,7 @@
         "colab": {}
       },
       "source": [
-        "def get_acc_weather_response(key):\n",
+        "def get_acc_weather_response(key,uTest):\n",
         "  acc_weather_base_url = \"http://dataservice.accuweather.com/currentconditions/v1/\" #requires location key\n",
         "\n",
         "  querystring = {\"details\":\"true\",\"language\":\"en-us\",\"apikey\":\"Q7FmHNhcT9oLhLirPaixbz5WFmgThFEz\"}\n",
@@ -115,8 +145,10 @@
         "  url = acc_weather_base_url + key\n",
         "  \n",
         "  response = requests.request(\"GET\", url, headers=headers, params=querystring)\n",
-        "\n",
-        "  return response.json()"
+        "  if uTest == True:\n",
+        "    return response.json()[0][\"Link\"]\n",
+        "  else:\n",
+        "    return response.json()"
       ],
       "execution_count": 0,
       "outputs": []
@@ -128,7 +160,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# Invoking Big Panda API to Ingest AccuWeather Data"
+        "# Function to Invoke Big Panda API to Ingest "
       ]
     },
     {
@@ -139,13 +171,13 @@
         "colab": {}
       },
       "source": [
-        "def push_weather_alerts_toBigPanda(host,location_key,condition,link,description):\n",
+        "def push_weather_alerts_toBigPanda(host,location_key,condition,link,description,uTest):\n",
         "  \n",
         "  url = \"https://api.bigpanda.io/data/v2/alerts\"\n",
         "\n",
         "  querystring = {\"apikey\":\"d8cb6fd7bc1b7fa13d1865a31612c4ac\"}\n",
         "\n",
-        "  payload = \"{\\n\\\"app_key\\\": \\\"d8cb6fd7bc1b7fa13d1865a31612c4ac\\\",\\n\\\"status\\\": \\\"ok\\\",\\n\\\"host\\\": \\\"\" + host + \"\\\", \\n\\\"incident_identifier\\\": \\\"\" + location_key + \"\\\",\\n\\\"check\\\": \\\"Weather Check\\\",\\n\\\"description\\\": \\\"\" + description +  \"\\\", \\n\\\"condition\\\": \\\"\" + condition + \"\\\", \\n\\\"link\\\": \\\"\" + link + \"\\\"\\n}\"\n",
+        "  payload = \"{\\n\\\"app_key\\\": \\\"d8cb6fd7bc1b7fa13d1865a31612c4ac\\\",\\n\\\"status\\\": \\\"warning\\\",\\n\\\"host\\\": \\\"\" + host + \"\\\", \\n\\\"incident_identifier\\\": \\\"\" + location_key + \"\\\",\\n\\\"check\\\": \\\"Weather Check\\\",\\n\\\"description\\\": \\\"\" + description +  \"\\\", \\n\\\"condition\\\": \\\"\" + condition + \"\\\", \\n\\\"link\\\": \\\"\" + link + \"\\\"\\n}\"\n",
         "\n",
         "  headers = {\n",
         "    'Authorization': \"Bearer 5b6c9f6f2180d429d25b5da2c0203b8b\",\n",
@@ -160,7 +192,53 @@
         "    }\n",
         "\n",
         "  response = requests.request(\"POST\", url, data=payload, headers=headers, params=querystring)\n",
-        "  return response"
+        "  if uTest == True:\n",
+        "    return response.status_code\n",
+        "  else:\n",
+        "    return response"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "618SknifvTM7",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Unit Testing Code\n",
+        "\n",
+        "Evaluate each API function if the individual components are successful using unittest Library. While Testing set the **Test = True** boolean value so unit testing occurs.\n",
+        "\n",
+        "-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
+        "\n",
+        "**Test case #1.** We will be using a sample key location for San Francisco location to test the Accu Weather API and the location Key is 347629. We will be representing this test data in the form of a python dictionary. **Success Criteria** is to receive a valid response from the Acc Weather API.\n",
+        "\n",
+        "**Test case #2.** We will be using a sample payload to load into the Big Panda API. **Success Criteria** is to receive a success response from Big Panda API.\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6r_Mb_ZETSrH",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "class Test_BigPandaLoadService(unittest.TestCase):\n",
+        "  \n",
+        "  def test_AccWeatherAPI(self):\n",
+        "    self.assertEqual(get_acc_weather_response(str(347629),uTest),'http://www.accuweather.com/en/us/san-francisco-ca/94103/current-weather/347629?lang=en-us')\n",
+        "      \n",
+        "  def test_BigPandaAPI(self):\n",
+        "    self.assertEqual(push_weather_alerts_toBigPanda(\"San Francisco\",\n",
+        "                                                    str(347629),\n",
+        "                                                    \"Mostly sunny\",\n",
+        "                                                    \"http://www.accuweather.com/en/us/san-francisco-ca/94103/current-weather/347629?lang=en-us\",\n",
+        "                                                    \"11.1 Km/h\",uTest),201)\n",
+        "  "
       ],
       "execution_count": 0,
       "outputs": []
@@ -172,7 +250,7 @@
         "colab_type": "text"
       },
       "source": [
-        "#Controller Program to Invoke Function Calls to Get data from AccuWeather API and Ingest to BigPanda.io"
+        "#Controller Program to get and Ingest Data"
       ]
     },
     {
@@ -180,74 +258,51 @@
       "metadata": {
         "id": "ryrnZFbd-v10",
         "colab_type": "code",
+        "outputId": "96281498-9dda-465f-e1d2-324fa33e0ade",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 527
-        },
-        "outputId": "d98286c1-2856-4cca-f054-b01622eefd19"
+          "height": 102
+        }
       },
       "source": [
         "if __name__ == \"__main__\":\n",
-        "  for host,locations in loc_keys_dict.items():\n",
-        "    for location_key in locations:\n",
-        "      #Handling Maximum allowed number of requests exception and capturing details from the response.\n",
-        "      try:\n",
-        "        acc_weather_response_list = get_acc_weather_response(str(location_key))\n",
-        "        #pretty print for printing reponses or output results in a readable format\n",
-        "        pp = pprint.PrettyPrinter()\n",
-        "        #pp.pprint(acc_weather_response_list)\n",
-        "        check = \"Weather Check\" #constant\n",
-        "        for response_dict in acc_weather_response_list:\n",
-        "          condition = response_dict[\"WeatherText\"]\n",
-        "          link = response_dict[\"Link\"]\n",
-        "          description = str(response_dict[\"WindGust\"][\"Speed\"][\"Metric\"][\"Value\"]) + \" \" + response_dict[\"WindGust\"][\"Speed\"][\"Metric\"][\"Unit\"]\n",
-        "          bpanda_response = push_weather_alerts_toBigPanda(host,str(location_key),condition,link,description)\n",
-        "          #When ingesting is successful then this will print sucess reponse\n",
-        "          pp.pprint(\"host:\" + host + \" Location_Key: \" + str(location_key) + \" Response: \" + bpanda_response.text)\n",
-        "      except TypeError:\n",
-        "        errCode = acc_weather_response_list[\"Code\"]\n",
-        "        errMessage = acc_weather_response_list[\"Message\"]\n",
-        "        errRefHost = host\n",
-        "        errRefLocKey = location_key\n",
-        "        pp.pprint(\"ErrorCode: \" + errCode + \" ErrorMessage: \"+ errMessage + \" Location: \" + errRefHost + \" LocationKey: \" + str(location_key))"
+        "  if uTest == False:\n",
+        "    for host,locations in loc_keys_dict1.items():\n",
+        "      for location_key in locations:\n",
+        "        #Handling Maximum allowed number of requests exception and capturing details from the response.\n",
+        "        try:\n",
+        "          acc_weather_response_list = get_acc_weather_response(str(location_key),uTest)\n",
+        "          #pretty print for printing reponses or output results in a readable format\n",
+        "          pp = pprint.PrettyPrinter()\n",
+        "          #pp.pprint(acc_weather_response_list)\n",
+        "          check = \"Weather Check\" #constant\n",
+        "          for response_dict in acc_weather_response_list:\n",
+        "            condition = response_dict[\"WeatherText\"]\n",
+        "            link = response_dict[\"Link\"]\n",
+        "            description = str(response_dict[\"WindGust\"][\"Speed\"][\"Metric\"][\"Value\"]) + \" \" + response_dict[\"WindGust\"][\"Speed\"][\"Metric\"][\"Unit\"]\n",
+        "            bpanda_response = push_weather_alerts_toBigPanda(host,str(location_key),condition,link,description,uTest)\n",
+        "            #When ingesting is successful then this will print sucess reponse\n",
+        "            pp.pprint(\"host:\" + host + \" Location_Key: \" + str(location_key) + \" Response: \" + bpanda_response.text)\n",
+        "        except TypeError:\n",
+        "          errCode = acc_weather_response_list[\"Code\"]\n",
+        "          errMessage = acc_weather_response_list[\"Message\"]\n",
+        "          pp.pprint(\"ErrorCode: \" + errCode + \" ErrorMessage: \"+ errMessage + \" Location: \" + host + \" LocationKey: \" + str(location_key))\n",
+        "  else:\n",
+        "    unittest.main(argv=[''], exit=False)\n",
+        "   "
       ],
-      "execution_count": 12,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "('ErrorCode: ServiceUnavailable ErrorMessage: The allowed number of requests '\n",
-            " 'has been exceeded. Location: New York LocationKey: 349727')\n",
-            "('ErrorCode: ServiceUnavailable ErrorMessage: The allowed number of requests '\n",
-            " 'has been exceeded. Location: New York LocationKey: 710949')\n",
-            "('ErrorCode: ServiceUnavailable ErrorMessage: The allowed number of requests '\n",
-            " 'has been exceeded. Location: New York LocationKey: 2531279')\n",
-            "('ErrorCode: ServiceUnavailable ErrorMessage: The allowed number of requests '\n",
-            " 'has been exceeded. Location: New York LocationKey: 2245721')\n",
-            "('ErrorCode: ServiceUnavailable ErrorMessage: The allowed number of requests '\n",
-            " 'has been exceeded. Location: New York LocationKey: 2212053')\n",
-            "('ErrorCode: ServiceUnavailable ErrorMessage: The allowed number of requests '\n",
-            " 'has been exceeded. Location: Chicago LocationKey: 348308')\n",
-            "('ErrorCode: ServiceUnavailable ErrorMessage: The allowed number of requests '\n",
-            " 'has been exceeded. Location: Chicago LocationKey: 2249562')\n",
-            "('ErrorCode: ServiceUnavailable ErrorMessage: The allowed number of requests '\n",
-            " 'has been exceeded. Location: Chicago LocationKey: 1162619')\n",
-            "('ErrorCode: ServiceUnavailable ErrorMessage: The allowed number of requests '\n",
-            " 'has been exceeded. Location: Chicago LocationKey: 1169367')\n",
-            "('ErrorCode: ServiceUnavailable ErrorMessage: The allowed number of requests '\n",
-            " 'has been exceeded. Location: Chicago LocationKey: 1068089')\n",
-            "('ErrorCode: ServiceUnavailable ErrorMessage: The allowed number of requests '\n",
-            " 'has been exceeded. Location: San Francisco LocationKey: 347629')\n",
-            "('ErrorCode: ServiceUnavailable ErrorMessage: The allowed number of requests '\n",
-            " 'has been exceeded. Location: San Francisco LocationKey: 113032')\n",
-            "('ErrorCode: ServiceUnavailable ErrorMessage: The allowed number of requests '\n",
-            " 'has been exceeded. Location: San Francisco LocationKey: 261737')\n",
-            "('ErrorCode: ServiceUnavailable ErrorMessage: The allowed number of requests '\n",
-            " 'has been exceeded. Location: San Francisco LocationKey: 3409211')\n",
-            "('ErrorCode: ServiceUnavailable ErrorMessage: The allowed number of requests '\n",
-            " 'has been exceeded. Location: San Francisco LocationKey: 262723')\n"
+            "..\n",
+            "----------------------------------------------------------------------\n",
+            "Ran 2 tests in 0.395s\n",
+            "\n",
+            "OK\n"
           ],
-          "name": "stdout"
+          "name": "stderr"
         }
       ]
     }
