--- a/gfAccuWeatherLoadToBigPanda.ipynb
+++ b/gfAccuWeatherLoadToBigPanda.ipynb
@@ -213,9 +213,9 @@
         "\n",
         "-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
         "\n",
-        "**Test case #1.** We will be using a sample key location for San Francisco location to test the Accu Weather API and the location Key is 347629. We will be representing this test data in the form of a python dictionary. **Success Criteria** is to receive a valid response from the Acc Weather API.\n",
+        "**Test case #1.** We will be using a sample key location for San Francisco location to test the Accu Weather API and the location Key is 347629. We will evaluate the Link information returned by the service. **Success Criteria** is to receive a valid response from the Acc Weather API and the link information is equal to what is mentioned in the assertEqual function.\n",
         "\n",
-        "**Test case #2.** We will be using a sample payload to load into the Big Panda API. **Success Criteria** is to receive a success response from Big Panda API.\n",
+        "**Test case #2.** We will be using a sample payload to load into the Big Panda API. **Success Criteria** is to receive a success response from Big Panda API and the response code is equal to 201 which means alert created successfully.\n",
         "\n"
       ]
     },
