--- a/gfAccuWeatherLoadToBigPanda.ipynb
+++ b/gfAccuWeatherLoadToBigPanda.ipynb
@@ -98,8 +98,8 @@
       "source": [
         "#Add or remove locations and keys of interest \n",
         "loc_keys_dict = {\n",
-        "    'New York': [349727, 710949, 2531279, 2245721, 2212053],\n",
-        "    'Chicago' : [348308, 2249562, 1162619, 1169367, 1068089],\n",
+        "    #'New York': [349727, 710949, 2531279, 2245721, 2212053],\n",
+        "    #'Chicago' : [348308, 2249562, 1162619, 1169367, 1068089],\n",
         "    'San Francisco': [347629, 113032, 261737, 3409211, 262723]\n",
         "}\n",
         "\n",
@@ -146,7 +146,9 @@
         "  \n",
         "  response = requests.request(\"GET\", url, headers=headers, params=querystring)\n",
         "  if uTest == True:\n",
-        "    return response.json()[0][\"Link\"]\n",
+        "    response.status_code\n",
+        "    #return response.json()[0][\"Link\"]\n",
+        "    return response.status_code\n",
         "  else:\n",
         "    return response.json()"
       ],
@@ -230,7 +232,8 @@
         "class Test_BigPandaLoadService(unittest.TestCase):\n",
         "  \n",
         "  def test_AccWeatherAPI(self):\n",
-        "    self.assertEqual(get_acc_weather_response(str(347629),uTest),'http://www.accuweather.com/en/us/san-francisco-ca/94103/current-weather/347629?lang=en-us')\n",
+        "    #self.assertEqual(get_acc_weather_response(str(347629),uTest),'http://www.accuweather.com/en/us/san-francisco-ca/94103/current-weather/347629?lang=en-us')\n",
+        "    self.assertEqual(get_acc_weather_response(str(347629),uTest),200)\n",
         "      \n",
         "  def test_BigPandaAPI(self):\n",
         "    self.assertEqual(push_weather_alerts_toBigPanda(\"San Francisco\",\n",
@@ -258,7 +261,7 @@
       "metadata": {
         "id": "ryrnZFbd-v10",
         "colab_type": "code",
-        "outputId": "96281498-9dda-465f-e1d2-324fa33e0ade",
+        "outputId": "963f0526-93d8-4d82-e23a-251167b104af",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 102
@@ -267,7 +270,7 @@
       "source": [
         "if __name__ == \"__main__\":\n",
         "  if uTest == False:\n",
-        "    for host,locations in loc_keys_dict1.items():\n",
+        "    for host,locations in loc_keys_dict.items():\n",
         "      for location_key in locations:\n",
         "        #Handling Maximum allowed number of requests exception and capturing details from the response.\n",
         "        try:\n",
@@ -291,14 +294,14 @@
         "    unittest.main(argv=[''], exit=False)\n",
         "   "
       ],
-      "execution_count": 21,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "..\n",
             "----------------------------------------------------------------------\n",
-            "Ran 2 tests in 0.395s\n",
+            "Ran 2 tests in 0.391s\n",
             "\n",
             "OK\n"
           ],
